fix spacing

--- a/css/bst.css
+++ b/css/bst.css
@@ -1196,7 +1196,7 @@ background-color: rgba(135, 71, 199, 1);
         background-color: #8747C7;
         color: #F0E0FF;
         text-align: center;
-        padding-bottom: 9px;
+        padding-bottom: 20px;
     }
     .banner-stripe-mobile h3, .page-banner-stripe-mobile h3{
     	color:#fff;
